# beatrice-vst

./: .clang-tidy  .gitignore  .gitmodules  CLA.txt  CMakeLists.txt  LICENSE.txt  LICENSES_BUNDLED.txt  Makefile  README.md  compile_flags.txt
.github/workflows/: build.yml  cla.yml
lib/beatricelib/: beatrice.h
resource/: Info.plist.in  au-info.plist  beatrice.rc
signatures/: cla.json
src/common/: beatricelib_dynamic_loader.cc  controller_core.h  error.h  gain.h  hungarian_algorithm.cc  hungarian_algorithm.h  model_config.h  parameter_schema.cc  parameter_schema.h  parameter_state.cc  parameter_state.h  processor_core.h  processor_core_0.cc  processor_core_0.h  processor_core_1.cc  processor_core_1.h  processor_core_2.cc  processor_core_2.h  processor_proxy.cc  processor_proxy.h  resample.h  spherical_average.h  voice_morph_parameter.cc  voice_morph_parameter.h  voice_morph_state.h
src/vst/: constants.h  controller.cc  controller.h  controls.h  description_text_layout.cc  description_text_layout.h  description_text_utf8.h  description_url.cc  description_url.h  editor.cc  editor.h  editor_description.cc  editor_description.h  editor_morph.h  editor_morph_controller.cc  editor_morph_controller.h  editor_views.h  editor_voice_selector.h  factory.cc  load.h  metadata.h.in  parameter.cc  parameter.h  processor.cc  processor.h  surface_texture.h
tools/: bench_processor.cc
